--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "integraseller-api",
+  "name": "integraseller-backend",
   "version": "1.0.0",
   "type": "module",
   "main": "src/server.js",
   "scripts": {
+    "dev": "node src/server.js",
     "start": "node src/server.js",
-    "dev": "node --watch src/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "@prisma/client": "^5.18.0"
+    "nodemailer": "^6.9.8"
   },
   "devDependencies": {
     "prisma": "^5.18.0"
